src/test/ui/const-eval-span.stderr
error[E0308]: mismatched types
  --> $DIR/const-eval-span.rs:19:9
   |
19 |     V = CONSTANT,
   |         ^^^^^^^^ expected isize, found struct `S`
   |
   = note: expected type `isize`
              found type `S`

error: aborting due to previous error

